--- a/migrate_xml/config/install/migrate_plus.migration.custom_xml_node.yml
+++ b/migrate_xml/config/install/migrate_plus.migration.custom_xml_node.yml
@@ -15,6 +15,9 @@ source:
     - modules/custom/migrate_xml/sources/articles.xml
   # XPath expression. It is common that it starts with a slash (/).
   item_selector: /articles/article
+  constants:
+    image_destination: 'public://images/'
+    file_destination: 'public://article_files/'
   fields:
     -
       name: title
@@ -42,6 +45,26 @@ source:
       name: user
       label: 'Author'
       selector: user
+      
+    -
+      name: file
+      label: 'FIle'
+      selector: file
+      
+    -
+      name: tags
+      label: 'Tags'
+      selector: tags
+      
+    -
+      name: photo_url
+      label: 'Photo'
+      selector: photo_url
+      
+    -
+      name: photo_title
+      label: 'Photo Totile'
+      selector: photo_title
       
   # Under 'ids', we identify source fields populated above which will uniquely
   # identify each imported item.
@@ -71,6 +94,23 @@ process:
       plugin: migration_lookup
       migration: custom_xml_user
       source: user
+  field_file:
+    plugin: file_import
+    source: file
+    destination: 'constants/file_destination'
+  field_tags:
+    -
+      plugin: explode
+      source: tags
+      delimiter: ‘,’
+    -
+      plugin: entity_generate
+      field: field_tags
+  field_image:
+    plugin: image_import
+    source: photo_url
+    destination: 'constants/image_destination'
+    alt: photo_title
 destination:
   plugin: entity:node
 migration_dependencies:
